; ModuleID = '/home/carl/AnghaBench/netdata/health/extr_health_config.c_health_pattern_from_foreach.c'
source_filename = "/home/carl/AnghaBench/netdata/health/extr_health_config.c_health_pattern_from_foreach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIMPLE_PATTERN_EXACT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @health_pattern_from_foreach(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i8* @strdupz(i8* %5)
  store i8* %6, i8** %3, align 8
  store i32* null, i32** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @dimension_remove_pipe_comma(i8* %10)
  %12 = load i8*, i8** %3, align 8
  %13 = load i32, i32* @SIMPLE_PATTERN_EXACT, align 4
  %14 = call i32* @simple_pattern_create(i8* %12, i32* null, i32 %13)
  store i32* %14, i32** %4, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @freez(i8* %15)
  br label %17

17:                                               ; preds = %9, %1
  %18 = load i32*, i32** %4, align 8
  ret i32* %18
}

declare dso_local i8* @strdupz(i8*) #1

declare dso_local i32 @dimension_remove_pipe_comma(i8*) #1

declare dso_local i32* @simple_pattern_create(i8*, i32*, i32) #1

declare dso_local i32 @freez(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
